# sqliterg

./: .gitignore  CHANGELOG.md  CHANGES_FROM_WS4SQLITE.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.binaries  Dockerfile.edge  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  TODO.md  changes_from_ws4sqlite.md  db_conf.template.yaml  stress_sqliterg.sh  stress_ws4sqlite.sh  test_20230818-1513.db
docs-site/: README.md  SUMMARY.md  building-and-testing.md  cheat-sheet.md  client-libraries.md  features.md  license.md  security.md  tutorial.md
docs-site/documentation/: authentication.md  configuration-file.md  requests.md  responses.md  running.md  security.md
docs-site/documentation/installation/: README.md  docker.md
docs-site/features/: README.md  performances.md
docs-site/integrations/: reverse-proxy.md
profiler/: Profile.java  stress_sqliterg.sh  stress_ws4sqlite.sh
profiler/environment/: test.yaml
src/: auth.rs  backup.rs  commandline.rs  commons.rs  db_config.rs  logic.rs  macros.rs  main.rs  main_config.rs  req_res.rs
test/: bubbu.db  bubbu.yaml  test.yaml  test_ws4sqlite.yaml
testing/: .gitignore  package-lock.json  package.json  sqliterg.test.js
testing/src/: boh.test.js
tests/: go.mod  go_test.go  structs.go  test.sh
tests/cors/: README.md  index.html  test.yaml
tests/env/: .gitignore
tests/tests/: 00000 - empty launch.sh  00010 - serve dir.sh  00020 - basic start.sh  00030 - basic call.sh
