[package]
authors = ["Germano Rizzo <oss /AT/ germanorizzo /DOT/ it>"]
description = "A SQLite remote gateway - query SQLite via HTTP"
name = "sqliterg"
version = "0.0.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-files = "~0"
actix-web = "~4"
actix-web-httpauth = "~0"
clap = { version = "~4", features = [ "derive" ] }
eyre = "~0"
hex = "~0"
ring = "~0"
# rusqlite = { git  = "https://github.com/rusqlite/rusqlite", features = ["serde_json"] }
# rusqlite = { version = "~0", features = ["bundled", "serde_json"] }
rusqlite = { version = "~0", features = ["serde_json"] }
serde = { version = "~1", features = ["derive"] }
serde_derive = "~1"
serde_json = "~1"
serde_yaml = "~0"

[profile.dev]
opt-level = 0
overflow-checks = true
strip = false
lto = false

[profile.release]
opt-level = 3
overflow-checks = false
strip = true
lto = true

[[bin]]
name = "sqliterg"
path = "src/main.rs"